src/Diamante/DistributionBundle/Resources/public/css/less/main.less
@import "mixins";
@import "variables";

input:focus:invalid:focus,
textarea:focus:invalid:focus,
select:focus:invalid:focus,
div.selector.error.focus,
div.uploader.error.focus
{
  border: 1px solid #e9322d;
  .border-radius(3px);
  outline: 0;
  outline: thin dotted \9;
  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(211, 33, 33, 0.6);
  -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(211, 33, 33, 0.6);
  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(211, 33, 33, 0.6);
  color: #555;
}

input[type=text].hasDatepicker.ui-datepicker-dialog-is-below:focus,
.datetimepicker-dialog-is-below,
.input-append.select2-drop-below,
.controls.select2-drop-below select,
.controls .selector.focus {
  + span.validation-failed {
    position: static;
    display: block;
    top: 0;
    color: @errorText;
    background-color: transparent;
    width: auto;
    margin: 5px 0 5px 14px;
    padding: 0;
    border-radius: 0;
    &:before {
      color: @errorText;
    }
    &:after {
      content: none;
    }
  }
}

.datetimepicker-dialog-is-below.timepicker-error + span.validation-failed:after {
  left: 0;
}

/*
 * DIAM-1358 Part of the mass action menu is hidden.
 * temporary fix till oro fix bug with dropdowns in grid
 */
.container-fluid.grid-scrollable-container {
  overflow: visible;
}


.desktop-version .main-menu-sided.minimized .main-menu {
  > li {
    height: 36px;
    position: relative;
    border-width: 1px 0;
    border-style: solid;
    border-top-color: @menuItemBorderTopColor;
    border-bottom-color: @menuItemBorderBottomColor;
    > a {
      font-size: 0;
      line-height: 20px;
      text-align: center;
      color: transparent;

      i[class^=icon-] {
        font-size: 15px;
        line-height: 34px;
        color: #b8c8d1;
      }
    }
    &:hover {
      border-width: 0;
      > a {
        width: 100%;
        background-color: #fff;
        position: absolute;
        z-index: @zindexFixedNavbar + 1;
        i[class^=icon-] {
          font-size: 18px;
          line-height: 36px;
          color: @menuBackGroundColor;
        }
      }
      > .dropdown-menu {
        display: block;
      }
    }
    &.active {
      #gradient > .vertical(lighten(@headerIconButtonColorStart, 5%), lighten(@headerIconButtonColorEnd, 1%));
      border-top-color: darken(@headerIconButtonColorStart, 1%);
      border-bottom-color: darken(@headerIconButtonColorEnd, 8%);
      > a i[class^=icon-] {
        color: #fff;
      }
      &:hover {
        i[class^=icon-] {
          color: @menuBackGroundColor;
        }
      }
    }
    .dropdown-menu {
      border: 1px solid #e8e8e8;
      width: auto;
      padding: 0;
      font-size: @baseFontSize;
      .border-radius(0 3px 3px 0);
      margin-top: 0;
      top: 0;
      left: 100%;
      .box-shadow(1px 2px 4px rgba(0, 0, 0, 0.3));
      a {
        padding: 5px 10px;
        color: @bodyColor;
        white-space: nowrap;
      }
      .active > a{
        background: none;
      }
      a:hover,
      .active > a:hover {
        background: #f3f3f3;
      }
      > a {
        color: inherit;
        font-weight: bold;
        font-size: 14px;
        padding: 7px 15px;
        display: block;
        clear: both;
        line-height: 20px;
        white-space: nowrap;
        i[class^=icon-] {
          display: none !important;
        }
      }
    }
  }
}

